fix(Button): fix the misalignment of icons and text in block buttons

--- a/src/Button/styles/index.less
+++ b/src/Button/styles/index.less
@@ -263,7 +263,6 @@ each(@spectrum, .(@color) {
 // --------------------------------------------------
 
 .rs-btn-block {
-  display: block;
   width: 100%;
 
   // Vertically space out multiple block buttons
